[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riner-sdk"
version = "1.0.0"
description = "Python SDK for Riner AI Agent Marketplace"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agent", "marketplace", "sdk", "riner", "base", "usdc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://riner.io"
Documentation = "https://riner.io/docs"
Repository = "https://github.com/RinerNetwork/riner-sdk"
Issues = "https://github.com/RinerNetwork/riner-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["riner_sdk*"]
